# haskell-data-analysis

./: .ghci  .gitignore  .project-settings.yml  LICENSE  README.md  analysis-app.cabal
config/: routes
src/: UserAnalysis.hs  UserModel.hs  UserParameters.hs  UserTypes.hs
src/Data/CSV/Conduit/: Persist.hs
src/Data/Conduit/: Analysis.hs
src/DataAnalysis/: Library.hs
src/DataAnalysis/Application/: Analyze.hs  Dispatch.hs  Foundation.hs  Import.hs  Params.hs  Prelude.hs  Types.hs
src/DataAnalysis/Application/Handler/: Datasources.hs  Export.hs  Help.hs  Home.hs  Import.hs  Review.hs  StartTime.hs
src/Skel/Custom/: Main.hs  UserAnalysis.hs  UserParameters.hs
src/Skel/RSI/: Main.hs  UserAnalysis.hs  UserParameters.hs
src/main/: Main.hs
templates/: datasources.hamlet  default-layout-wrapper.hamlet  default-layout.lucius  help.hamlet  import.hamlet  review.hamlet  review.julius  review.lucius
