name:                analysis-app
version:             0.0.0
synopsis:            Analysis web app.
description:         Analysis web app.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2014 FP Complete
category:            Analysis
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  ghc-options:       -Wall -O2
  exposed-modules:   DataAnalysis.Application.Prelude
                     DataAnalysis.Application.Handler.Home
                     DataAnalysis.Application.Handler.Review
                     DataAnalysis.Application.Handler.Export
                     DataAnalysis.Application.Handler.Help
                     DataAnalysis.Application.Handler.Import
                     DataAnalysis.Application.Handler.StartTime
                     DataAnalysis.Application.Handler.Datasources
                     DataAnalysis.Application.Foundation
                     DataAnalysis.Application.Types
                     DataAnalysis.Application.Dispatch
                     DataAnalysis.Application.Analyze
                     DataAnalysis.Library
                     Data.Conduit.Analysis
                     Data.CSV.Conduit.Persist
  build-depends:     xml-conduit >= 1.1.0.0,
                     xml-types >= 0.3.4,
                     basic-prelude >= 0.3.6.0,
                     persistent >= 2.0.0,
                     persistent-template >= 2.0.0,
                     http-client >= 0.2.0.0,
                     aeson >= 0.6.2.0,
                     filepath >= 1.3.0.0,
                     old-time >= 1.1.0.0,
                     blaze-markup >= 0.5.1.0,
                     hamlet >= 1.1.7.0,
                     hashable >= 1.2.1.0,
                     semigroups >= 0.12.1,
                     transformers >= 0.3.0.0,
                     unordered-containers >= 0.2.3.0,
                     blaze-builder >= 0.3.3.0,
                     resourcet >= 0.4.10,
                     http-conduit >= 2.0.0.0,
                     yesod-static >= 1.2.2.0,
                     safe >= 0.3.3,
                     filepath >= 1.3.0.0,
                     old-time >= 1.1.0,
                     directory >= 1.1.0,
                     base >= 4 && <5,
                     yesod,
                     hamlet,
                     text,
                     containers,
                     data-default,
                     bytestring,
                     stm,
                     blaze-markup,
                     conduit,
                     aeson,
                     ghc-prim,
                     time,
                     lens,
                     old-locale,
                     yesod-static,
                     csv-conduit,
                     blaze-builder,
                     http-conduit,
                     tagged,
                     resourcet,
                     http-client,
                     vector,
                     unordered-containers,
                     transformers,
                     semigroups,
                     hashable,
                     safe,
                     double-conversion,
                     template-haskell

executable analysis-app
  hs-source-dirs:    src/main src
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  build-depends:     xml-conduit >= 1.1.0.0,
                     xml-types >= 0.3.4,
                     basic-prelude >= 0.3.6.0,
                     persistent >= 2.0.0,
                     persistent-template >= 2.0.0,
                     http-client >= 0.2.0.0,
                     aeson >= 0.6.2.0,
                     filepath >= 1.3.0.0,
                     old-time >= 1.1.0.0,
                     blaze-markup >= 0.5.1.0,
                     hamlet >= 1.1.7.0,
                     hashable >= 1.2.1.0,
                     semigroups >= 0.12.1,
                     transformers >= 0.3.0.0,
                     unordered-containers >= 0.2.3.0,
                     blaze-builder >= 0.3.3.0,
                     resourcet >= 0.4.10,
                     http-conduit >= 2.0.0.0,
                     yesod-static >= 1.2.2.0,
                     safe >= 0.3.3,
                     directory >= 1.1.0,
                     base >= 4 && <5,
                     analysis-app,
                     text,
                     data-default,
                     persistent,
                     persistent-template,
                     time,
                     lens,
                     old-locale,
                     conduit,
                     csv-conduit,
                     bytestring,
                     lens,
                     yesod,
                     vector,
                     tagged,
                     containers,
                     double-conversion,
                     template-haskell,
                     basic-prelude
